# stt-queue

./: .gitignore  LICENSE  README.md  architecture.md  architecture.zh.md  benchmark-plan.md  benchmark-plan.zh.md  mac-mini-deployment.md  mac-mini-deployment.zh.md  queue-contract.md  queue-contract.zh.md
agent-skill/stt-queue/: SKILL.md
agent-skill/stt-queue/scripts/: health.sh  poll_job.sh  submit_audio.sh
deploy/: ai.stt.api.plist.example  ai.stt.worker.plist.example  bootstrap-mac-mini.sh  install-openclaw-skill.sh  nginx-stt-location.conf  verify-mac-mini.sh
openclaw-skill/stt-queue/: SKILL.md
openclaw-skill/stt-queue/scripts/: common.sh  retry_job.sh
service/: README.md  pyproject.toml
service/src/stt_queue/: __init__.py  api.py  audio.py  cleanup.py  config.py  db.py  engine.py  ids.py  models.py  worker.py
service/tests/: test_api.py  test_audio.py  test_cleanup.py  test_config.py  test_db.py  test_engine.py  test_worker.py
